// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align.md - markdown-verify 1`] = `
|a|b|c|
|:--|:-:|--:|
|d|e|f|
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| a   |  b  |   c |
| :-- | :-: | --: |
| d   |  e  |   f |

`;

exports[`cjk.md - markdown-verify 1`] = `
| abc | def | ghi |
| --- | --- | --- |
| 第一欄 | 第二欄 | 第三欄 |
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| abc    | def    | ghi    |
| ------ | ------ | ------ |
| 第一欄 | 第二欄 | 第三欄 |

`;

exports[`emoji.md - markdown-verify 1`] = `
| abc | def | ghi |
| --- | --- | --- |
| 👍👍👍 | 👍👍👍 | 👍👍👍 |
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| abc    | def    | ghi    |
| ------ | ------ | ------ |
| 👍👍👍 | 👍👍👍 | 👍👍👍 |

`;

exports[`empty.md - markdown-verify 1`] = `
Foo | Bar
--- | ---
X   |
Y   |
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| Foo | Bar |
| --- | --- |
| X   |
| Y   |

`;

exports[`escape.md - markdown-verify 1`] = `
| a | b | c |
|:--|:-:|--:|
| \\| | \\| | \\| |
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| a   |  b  |   c |
| :-- | :-: | --: |
| \\|  | \\|  |  \\| |

`;

exports[`html.md - markdown-verify 1`] = `
Default | CLI Override | API Override
--------|--------------|-------------
\`"none"\` | <code>--trailing-comma <none&#124;es5&#124;all></code> | <code>trailingComma: "<none&#124;es5&#124;all>"</code>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| Default  | CLI Override                                           | API Override                                           |
| -------- | ------------------------------------------------------ | ------------------------------------------------------ |
| \`"none"\` | <code>--trailing-comma <none&#124;es5&#124;all></code> | <code>trailingComma: "<none&#124;es5&#124;all>"</code> |

`;

exports[`simple.md - markdown-verify 1`] = `
| Title A | Title B | Title C |
|---|---|---|
| content A | content B | content C |
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| Title A   | Title B   | Title C   |
| --------- | --------- | --------- |
| content A | content B | content C |

`;
